fix(bottom-bar): behave correctly on mobile

--- a/src/components/bottom-bar/shadowdom-styles.css
+++ b/src/components/bottom-bar/shadowdom-styles.css
@@ -18,7 +18,7 @@
   right: 0;
   overflow: hidden;
   position: fixed;
-  top: 100vh;
+  bottom: -100vh;
   will-change: transform;
   z-index: 9;
 
